PROJECT(tests C CXX)

SET(CMAKE_BUILD_TYPE Debug)

INCLUDE_DIRECTORIES(../include)

IF (MSVC)
    ADD_DEFINITIONS(
        -D_CRT_NONSTDC_NO_WARNINGS
        -D_CRT_SECURE_NO_WARNINGS
        -D_SCL_SECURE_NO_WARNINGS
        -DWIN32_LEAN_AND_MEAN)

    SET(CMAKE_USE_WIN32_THREADS_INIT true)
ENDIF (MSVC)

FILE(GLOB TEST_SRC main.cpp)

ADD_EXECUTABLE(tests ${TEST_SRC})

FIND_PACKAGE(Threads REQUIRED)
IF (Threads_FOUND)
    TARGET_LINK_LIBRARIES(tests ${CMAKE_THREAD_LIBS_INIT})
ELSE()
    MESSAGE(FATAL_ERROR "Unable to locate thread library")
ENDIF()

TARGET_LINK_LIBRARIES(tests)

